Closed Bug 1770729 Opened 3 years ago Closed 3 years ago

Fix IntersectionObserver + overflow:clip on zero-sized elements.

Categories

(Core :: Layout: Scrolling and Overflow, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.

I realized my fix in bug 1769512 (using IsEmpty()) wasn't quite correct
in this case, because IntersectionObserver preserves edge-inclusive
intersections.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6fb2ab75b12b Fix IntersectionObserver overflow: clip on zero-sized elements. r=jwatt
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/34166 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: