Bug 1770729 - Fix IntersectionObserver overflow: clip on zero-sized elements. r=jwatt

I realized my fix in bug 1769512 (using IsEmpty()) wasn't quite correct
in this case, because IntersectionObserver preserves edge-inclusive
intersections.

Differential Revision: https://phabricator.services.mozilla.com/D147078